# traffic-jam

./: .env  Cargo.toml  dashboard.html  readme.md
migrations/2023-03-06-002853_create_products/: up.sql
migrations/2023-03-15-125707_use_identity_with_products/: down.sql  up.sql
migrations/2023-03-17-003911_add_price_to_products/: down.sql  up.sql
src/: authorize_net.rs  db.rs  ecommerce.rs  inventory.rs  lib.rs  main.rs  models.rs  schema.rs
