[package]
name = "traffic-jam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.8"
diesel = { version = "2.0.0", features = ["postgres", "numeric"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
