[package]
name = "traffic-jam"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.4"
axum = { version = "0.6.8", features = ["ws"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "numeric", "r2d2"] }
dotenvy = "0.15"
futures = "0.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.25.0", features = ["full"] }
